Finalized alignment and corrected mobile responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h2{
 }
 .addArea {
 	
-	height:1500px;
+	height:1300px;
 
 }
 .lookBetter {
